apps-network/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-network
  labels:
    cert-manager-tls: kubeflow-ingressgateway-certs
