apps-network/local/apps-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apps-gateway-cloud
  namespace: apps-network
  annotations: {}
    #external-dns.alpha.kubernetes.io/hostname: "*.kubefrog.ai"
    #external-dns.alpha.kubernetes.io/target: "172.22.80.100"
    #external-dns.alpha.kubernetes.io/target: "176.185.193.54"
    #external-dns.alpha.kubernetes.io/ttl: "120"
    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - ollama-webui.kubefrog.ai
        - grafana.kubefrog.ai
        - flowise.kubefrog.ai
        - superset.kubefrog.ai
        - harbor-core.kubefrog.ai
        - notary.kubefrog.ai
        - kiali.kubefrog.ai
        - prometheus.kubefrog.ai
        - loki.kubefrog.ai
        - druid.kubefrog.ai
        - trino.kubefrog.ai
        - argo-workflow.kubefrog.ai
        - kubefrog.kubefrog.ai
        - tooljet.kubefrog.ai
        - jaeger.kubefrog.ai
        - wekan.kubefrog.ai
        - wordpress.kubefrog.ai
        - odoo.kubefrog.ai
        - api.kubefrog.ai
        - kubefrog-web.kubefrog.ai
        - opik.kubefrog.ai
        - models.kubefrog.ai
        - n8n.kubefrog.ai
        - openmetadata.kubefrog.ai
        #- notebook.kubefrog.ai
      # Upgrade HTTP to HTTPS
      tls:
        httpsRedirect: true
    - port:
        name: https
        number: 443
        protocol: HTTPS
      hosts:
        - ollama-webui.kubefrog.ai
        - grafana.kubefrog.ai
        - superset.kubefrog.ai
        - harbor-core.kubefrog.ai
        - notary.kubefrog.ai
        - kiali.kubefrog.ai
        - prometheus.kubefrog.ai
        - loki.kubefrog.ai
        - druid.kubefrog.ai
        - trino.kubefrog.ai
        - argo-workflow.kubefrog.ai
        - kubefrog.kubefrog.ai
        - tooljet.kubefrog.ai
        - jaeger.kubefrog.ai
        - wekan.kubefrog.ai
        - wordpress.kubefrog.ai
        - odoo.kubefrog.ai
        - api.kubefrog.ai
        - kubefrog-web.kubefrog.ai
        - opik.kubefrog.ai
        - models.kubefrog.ai
        - n8n.kubefrog.ai
        - openmetadata.kubefrog.ai
        - flowise.kubefrog.ai
        # - notebook.kubefrog.ai
      tls:
        mode: SIMPLE
        credentialName: kubeflow-ingressgateway-certs-kubefrog-ai
    - port:
        name: postgres
        number: 5432
        protocol: TLS
      hosts:
        - database.kubefrog.ai
      tls:
        mode: SIMPLE
        credentialName: kubeflow-ingressgateway-certs-kubefrog-ai
