apps-network/local/flowise-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flowise
  namespace: flowiseai
spec:
  hosts:
    - flowise.kubefrog.ai
  http:
    - route:
        - destination:
            host: release-name-flowise
            port:
              number: 3000
  gateways:
    - apps-network/apps-gateway-cloud
