apps-network/local/harbor-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
  labels:
    app: harbor
spec:
  parentRefs:
  - name: harbor-gateway
    namespace: harbor
  hostnames:
  - harbor-core-local.kubefrog.fr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /c/
    backendRefs:
    - name: release-name-harbor-core
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    backendRefs:
    - name: release-name-harbor-core
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /service/
    backendRefs:
    - name: release-name-harbor-core
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v2/
    backendRefs:
    - name: release-name-harbor-core
      port: 80
  - matches: 
    - path:
        type: PathPrefix
        value: /chartrepo/
    backendRefs:
    - name: release-name-harbor-core
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: release-name-harbor-portal
      port: 80
