apps-network/local/openmetadata-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: openmetadata
  namespace: openmetadata
spec:
  hosts:
    - openmetadata.kubefrog.ai
  http:
    - route:
        - destination:
            host: openmetadata
            port:
              number: 8585
  gateways:
    - apps-network/apps-gateway-cloud
